# target-bigquery

./: CONTRIBUTING.md  HISTORY.md  README.md  pyproject.toml  setup.py
target_bigquery/: __init__.py  schema.py  sync.py
tests/: install_test.sh
